--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body{
     align-items: center;
     border-bottom: solid black 1px;
     gap:10px;
+    position:sticky;
+    top:0px;
+    background-color: white;
+    z-index: 1;
 }
 .navbar__s1__title{
   color: #A435F0;
@@ -34,6 +38,7 @@ body{
   border:none;
   font-size: 16px;
   width:100%;
+  background-color: transparent;
   
 }
 .navbar__s2 input:focus{
@@ -44,6 +49,27 @@ body{
   display:flex;
   gap:10px;
   align-items: center;
+}
+
+/*My learning Popup*/
+.mylearning{
+  position:relative;
+  cursor: pointer;
+}
+
+.mylearning__popup{
+  position:absolute;
+  background-color: white;
+  border: solid black 1px;
+  width:100px;
+  top:150%;
+  padding:20px;
+  right:0px;
+  display: none;
+}
+
+.mylearning:hover .mylearning__popup{
+  display:block;
 }
 
 .categories{
@@ -61,8 +87,24 @@ body{
   padding:10px;
 
 }
+
+.sale-image{
+  position:relative;
+}
+
 .sale-image img{
   width:100%;
+ }
+
+.sale-image__offer{
+  background-color: white;
+  border:solid black 2px;
+  color: black;
+  position:absolute;
+  padding:20px;
+  top:150px;
+  left:50px;
+
 }
 
 .recommended{
