--- a/style.css
+++ b/style.css
@@ -78,14 +78,22 @@ body{
   border-bottom: solid black 1px;
   flex-direction:row;
   justify-content: space-evenly;
-}
+ }
 
 .categories p{
   background-color: #A435F0;
   color: white;
   border-radius:30px;
   padding:10px;
+  cursor: pointer;
+  border: solid #A435F0 1px;
+}
 
+.categories p:hover{
+  transition:1s;
+  background-color: transparent;
+  color:black;
+  border: solid #A435F0 1px;
 }
 
 .sale-image{
@@ -104,7 +112,23 @@ body{
   padding:20px;
   top:150px;
   left:50px;
+  animation-name:zoom;
+  animation-duration: 2s;
+  opacity:0;
+  animation-fill-mode: forwards;
 
+}
+
+@keyframes zoom{
+  0%{
+    transform:scale(0);
+    opacity:0;
+  }
+
+  100%{
+    transform:scale(1);
+    opacity:1;
+  }
 }
 
 .recommended{
