--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ body{
 .navbar__s2 input:focus{
   outline: none;
 }
+.navbar__s4{
+  display:none;
+}
 
 .navbar__s3{
   display:flex;
@@ -109,9 +112,9 @@ body{
   border:solid black 2px;
   color: black;
   position:absolute;
-  padding:20px;
-  top:150px;
-  left:50px;
+  padding:2%;
+  top:24%;
+  left:10%;
   animation-name:zoom;
   animation-duration: 2s;
   opacity:0;
@@ -144,7 +147,9 @@ body{
 }
 
 .course-card{
-  width:250px;
+  flex-grow: 1;
+  flex-basis: 20%;
+  margin:5px;
 }
 
 .course-card img{
@@ -201,3 +206,27 @@ body{
     margin:20px;
     align-items: center;
   }
+
+  /*Media Queries*/
+  @media screen and (max-width:800px){
+    body{
+      font-size:10px;
+    }
+    
+  }
+
+  @media screen and (max-width:600px){
+    .course-card{
+      flex-basis:40%;
+    }
+    .categories{
+      display:none;
+    }
+    .navbar__s2,.navbar__s3{
+      display: none;
+    }
+    .navbar__s4{
+      display: block;
+    }
+  }
+
